2007-11-19  Dan Williams  <dcbw@redhat.com>

	* src/wireless-security/eap-method-peap.c
	  src/wireless-security/eap-method-ttls.c
		- (nag_dialog_response_cb): fix copy & paste error causing segfaults
			with the CA cert nag dialog

2007-11-19  Dan Williams  <dcbw@redhat.com>

	* src/wireless-dialog.h
	  src/wireless-dialog.c
		- (nma_wireless_dialog_get_connection): return the AP this dialog was
			for, if any

	* src/applet.c
		- (nma_menu_item_activate): simplify; if the connection was invalid as
			created (ie, like EAP-TTLS requires either identity or anonymous
			identity), then show the wireless security dialog to get that info
			before attempting to connect
		- (other_wireless_response_cb): grab the specific object path of the AP
			the security was for when trying to connect

2007-11-19  Dan Williams  <dcbw@redhat.com>

	* src/applet-dbus-settings.c
		- (applet_dbus_settings_add_connection): save the connection to GConf
			after adding it to the connection list to avoid the GConf key
			change notification firing before the connection was added to
			the connection list
		- (applet_dbus_connection_settings_changed,
		   applet_dbus_connection_settings_new,
		   applet_dbus_connection_settings_new_from_connection): fill certs
			before verifying the connection, because some EAP types (TLS for
			example) require a private key to be valid

2007-11-16  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
		- (nma_info_dialog_update): actually show secondary DNS server address
			instead of primary DNS server address twice

2007-11-16  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
		- (get_security_for_ap): fix default proto for WPA Enterprise

2007-11-16  Dan Williams  <dcbw@redhat.com>

	* src/utils/utils.h
	  src/utils/utils.c
	  src/utils/Makefile.am
	  src/Makefile.am
		- (utils_fill_connection_certs, utils_clear_filled_connection_certs):
			move these functions to a more general place

	* src/applet.c